Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Private/Generate/Export/UEngine.h

	DOTNET_EXPORT auto E_PROP_UEngine_bIsInitialized_GET(UEngine* Ptr) { return Ptr->bIsInitialized; }
	DOTNET_EXPORT void E_PROP_UEngine_bIsInitialized_SET(UEngine* Ptr, bool Value) { Ptr->bIsInitialized = Value; }
	
	DOTNET_EXPORT auto E_PROP_UEngine_BSPSelectionHighlightIntensity_GET(UEngine* Ptr) { return Ptr->BSPSelectionHighlightIntensity; }
	DOTNET_EXPORT void E_PROP_UEngine_BSPSelectionHighlightIntensity_SET(UEngine* Ptr, float Value) { Ptr->BSPSelectionHighlightIntensity = Value; }
	
	DOTNET_EXPORT auto E_PROP_UEngine_CameraRotationThreshold_GET(UEngine* Ptr) { return Ptr->CameraRotationThreshold; }
	DOTNET_EXPORT void E_PROP_UEngine_CameraRotationThreshold_SET(UEngine* Ptr, float Value) { Ptr->CameraRotationThreshold = Value; }
	
	DOTNET_EXPORT auto E_PROP_UEngine_CameraTranslationThreshold_GET(UEngine* Ptr) { return Ptr->CameraTranslationThreshold; }
	DOTNET_EXPORT void E_PROP_UEngine_CameraTranslationThreshold_SET(UEngine* Ptr, float Value) { Ptr->CameraTranslationThreshold = Value; }
	
	DOTNET_EXPORT auto E_PROP_UEngine_ClientCycles_GET(UEngine* Ptr) { return Ptr->ClientCycles; }
	DOTNET_EXPORT void E_PROP_UEngine_ClientCycles_SET(UEngine* Ptr, int32 Value) { Ptr->ClientCycles = Value; }
	
	DOTNET_EXPORT auto E_PROP_UEngine_DisplayGamma_GET(UEngine* Ptr) { return Ptr->DisplayGamma; }
	DOTNET_EXPORT void E_PROP_UEngine_DisplayGamma_SET(UEngine* Ptr, float Value) { Ptr->DisplayGamma = Value; }
	
	DOTNET_EXPORT auto E_PROP_UEngine_FixedFrameRate_GET(UEngine* Ptr) { return Ptr->FixedFrameRate; }
	DOTNET_EXPORT void E_PROP_UEngine_FixedFrameRate_SET(UEngine* Ptr, float Value) { Ptr->FixedFrameRate = Value; }
	
	DOTNET_EXPORT auto E_PROP_UEngine_GameCycles_GET(UEngine* Ptr) { return Ptr->GameCycles; }
	DOTNET_EXPORT void E_PROP_UEngine_GameCycles_SET(UEngine* Ptr, int32 Value) { Ptr->GameCycles = Value; }
	
	DOTNET_EXPORT auto E_PROP_UEngine_GameScreenshotSaveDirectory_GET(UEngine* Ptr) { return (INT_PTR)&(Ptr->GameScreenshotSaveDirectory); }
	DOTNET_EXPORT void E_PROP_UEngine_GameScreenshotSaveDirectory_SET(UEngine* Ptr, INT_PTR Value) { Ptr->GameScreenshotSaveDirectory = *(FDirectoryPath*)Value; }
	
	DOTNET_EXPORT auto E_PROP_UEngine_GameSingleton_GET(UEngine* Ptr) { return ConvertToManage_ObjectPointerDescription(Ptr->GameSingleton); }
	DOTNET_EXPORT void E_PROP_UEngine_GameSingleton_SET(UEngine* Ptr, UObject* Value) { Ptr->GameSingleton = Value; }
	
	DOTNET_EXPORT auto E_PROP_UEngine_HoverHighlightIntensity_GET(UEngine* Ptr) { return Ptr->HoverHighlightIntensity; }
	DOTNET_EXPORT void E_PROP_UEngine_HoverHighlightIntensity_SET(UEngine* Ptr, float Value) { Ptr->HoverHighlightIntensity = Value; }
	
	DOTNET_EXPORT auto E_PROP_UEngine_IdealLightMapDensity_GET(UEngine* Ptr) { return Ptr->IdealLightMapDensity; }
	DOTNET_EXPORT void E_PROP_UEngine_IdealLightMapDensity_SET(UEngine* Ptr, float Value) { Ptr->IdealLightMapDensity = Value; }
	
	DOTNET_EXPORT auto E_PROP_UEngine_LevelColorationLitMaterialName_GET(UEngine* Ptr) { return ConvertToManage_StringWrapper(Ptr->LevelColorationLitMaterialName); }
	DOTNET_EXPORT void E_PROP_UEngine_LevelColorationLitMaterialName_SET(UEngine* Ptr, char* Value) { Ptr->LevelColorationLitMaterialName = ConvertFromManage_FString(Value); }
	
	DOTNET_EXPORT auto E_PROP_UEngine_LevelColorationUnlitMaterialName_GET(UEngine* Ptr) { return ConvertToManage_StringWrapper(Ptr->LevelColorationUnlitMaterialName); }
	DOTNET_EXPORT void E_PROP_UEngine_LevelColorationUnlitMaterialName_SET(UEngine* Ptr, char* Value) { Ptr->LevelColorationUnlitMaterialName = ConvertFromManage_FString(Value); }
	
	DOTNET_EXPORT auto E_PROP_UEngine_LightingTexelDensityName_GET(UEngine* Ptr) { return ConvertToManage_StringWrapper(Ptr->LightingTexelDensityName); }
	DOTNET_EXPORT void E_PROP_UEngine_LightingTexelDensityName_SET(UEngine* Ptr, char* Value) { Ptr->LightingTexelDensityName = ConvertFromManage_FString(Value); }
	
	DOTNET_EXPORT auto E_PROP_UEngine_MaxES2PixelShaderAdditiveComplexityCount_GET(UEngine* Ptr) { return Ptr->MaxES2PixelShaderAdditiveComplexityCount; }
	DOTNET_EXPORT void E_PROP_UEngine_MaxES2PixelShaderAdditiveComplexityCount_SET(UEngine* Ptr, float Value) { Ptr->MaxES2PixelShaderAdditiveComplexityCount = Value; }
	
	DOTNET_EXPORT auto E_PROP_UEngine_MaxES3PixelShaderAdditiveComplexityCount_GET(UEngine* Ptr) { return Ptr->MaxES3PixelShaderAdditiveComplexityCount; }
	DOTNET_EXPORT void E_PROP_UEngine_MaxES3PixelShaderAdditiveComplexityCount_SET(UEngine* Ptr, float Value) { Ptr->MaxES3PixelShaderAdditiveComplexityCount = Value; }
	
	DOTNET_EXPORT auto E_PROP_UEngine_MaximumLoopIterationCount_GET(UEngine* Ptr) { return Ptr->MaximumLoopIterationCount; }
	DOTNET_EXPORT void E_PROP_UEngine_MaximumLoopIterationCount_SET(UEngine* Ptr, int32 Value) { Ptr->MaximumLoopIterationCount = Value; }
	
	DOTNET_EXPORT auto E_PROP_UEngine_MaxLightMapDensity_GET(UEngine* Ptr) { return Ptr->MaxLightMapDensity; }
	DOTNET_EXPORT void E_PROP_UEngine_MaxLightMapDensity_SET(UEngine* Ptr, float Value) { Ptr->MaxLightMapDensity = Value; }
	
	DOTNET_EXPORT auto E_PROP_UEngine_MaxOcclusionPixelsFraction_GET(UEngine* Ptr) { return Ptr->MaxOcclusionPixelsFraction; }
	DOTNET_EXPORT void E_PROP_UEngine_MaxOcclusionPixelsFraction_SET(UEngine* Ptr, float Value) { Ptr->MaxOcclusionPixelsFraction = Value; }
	
	DOTNET_EXPORT auto E_PROP_UEngine_MaxParticleResize_GET(UEngine* Ptr) { return Ptr->MaxParticleResize; }
	DOTNET_EXPORT void E_PROP_UEngine_MaxParticleResize_SET(UEngine* Ptr, int32 Value) { Ptr->MaxParticleResize = Value; }
	
	DOTNET_EXPORT auto E_PROP_UEngine_MaxParticleResizeWarn_GET(UEngine* Ptr) { return Ptr->MaxParticleResizeWarn; }
	DOTNET_EXPORT void E_PROP_UEngine_MaxParticleResizeWarn_SET(UEngine* Ptr, int32 Value) { Ptr->MaxParticleResizeWarn = Value; }
	
	DOTNET_EXPORT auto E_PROP_UEngine_MaxPixelShaderAdditiveComplexityCount_GET(UEngine* Ptr) { return Ptr->MaxPixelShaderAdditiveComplexityCount; }
	DOTNET_EXPORT void E_PROP_UEngine_MaxPixelShaderAdditiveComplexityCount_SET(UEngine* Ptr, float Value) { Ptr->MaxPixelShaderAdditiveComplexityCount = Value; }
	
	DOTNET_EXPORT auto E_PROP_UEngine_MeshLODRange_GET(UEngine* Ptr) { return Ptr->MeshLODRange; }
	DOTNET_EXPORT void E_PROP_UEngine_MeshLODRange_SET(UEngine* Ptr, float Value) { Ptr->MeshLODRange = Value; }
	
	DOTNET_EXPORT auto E_PROP_UEngine_MinDesiredFrameRate_GET(UEngine* Ptr) { return Ptr->MinDesiredFrameRate; }
	DOTNET_EXPORT void E_PROP_UEngine_MinDesiredFrameRate_SET(UEngine* Ptr, float Value) { Ptr->MinDesiredFrameRate = Value; }
	
	DOTNET_EXPORT auto E_PROP_UEngine_MinLightMapDensity_GET(UEngine* Ptr) { return Ptr->MinLightMapDensity; }
	DOTNET_EXPORT void E_PROP_UEngine_MinLightMapDensity_SET(UEngine* Ptr, float Value) { Ptr->MinLightMapDensity = Value; }
	
	DOTNET_EXPORT auto E_PROP_UEngine_NearClipPlane_GET(UEngine* Ptr) { return Ptr->NearClipPlane; }
	DOTNET_EXPORT void E_PROP_UEngine_NearClipPlane_SET(UEngine* Ptr, float Value) { Ptr->NearClipPlane = Value; }
	
	DOTNET_EXPORT auto E_PROP_UEngine_NetClientTicksPerSecond_GET(UEngine* Ptr) { return Ptr->NetClientTicksPerSecond; }
	DOTNET_EXPORT void E_PROP_UEngine_NetClientTicksPerSecond_SET(UEngine* Ptr, float Value) { Ptr->NetClientTicksPerSecond = Value; }
	
	DOTNET_EXPORT auto E_PROP_UEngine_NumPawnsAllowedToBeSpawnedInAFrame_GET(UEngine* Ptr) { return Ptr->NumPawnsAllowedToBeSpawnedInAFrame; }
	DOTNET_EXPORT void E_PROP_UEngine_NumPawnsAllowedToBeSpawnedInAFrame_SET(UEngine* Ptr, int32 Value) { Ptr->NumPawnsAllowedToBeSpawnedInAFrame = Value; }
	
	DOTNET_EXPORT auto E_PROP_UEngine_ParticleEventManagerClassPath_GET(UEngine* Ptr) { return ConvertToManage_StringWrapper(Ptr->ParticleEventManagerClassPath); }
	DOTNET_EXPORT void E_PROP_UEngine_ParticleEventManagerClassPath_SET(UEngine* Ptr, char* Value) { Ptr->ParticleEventManagerClassPath = ConvertFromManage_FString(Value); }
	
	
	DOTNET_EXPORT INT_PTR E_NewObject_UEngine(UObject* Parent, char* Name)
	{
		return (INT_PTR)NewObject<UEngine>(Parent, FName(UTF8_TO_TCHAR(Name)));
	}